Wed Jun  5 00:08:32 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* gss-client.c (call_server): When reading in the test value from
 		a file, don't free free inbuf.value until after the last
 		place where we use it.

Wed Apr 17 20:54:37 1996  Marc Horowitz  <marc@mit.edu>

	* all files: integrated changes from OpenVision as of
	October 1995

Tue Mar 12 23:46:26 1996  Ken Raeburn  <raeburn@cygnus.com>

	* gss-server.c (timeval_subtract): Use old-style function
	definition.

Sun Mar  3 12:14:48 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* gss-server.c (test_import_export_context): Add second argument
		to gettimeofday.

Sat Mar  2 03:03:27 1996  Theodore Y. Ts'o  <tytso@dcl>

	* gss-server.c (sign_server): Do better import/export security
		checking.  If the received message to be signed is not
		printable (at least the first two characters are not),
		display the message in hex.  Print the hex values of the
		incoming and outcoming packets, for your information.

	* gss-misc.c (print_token, display_buffer): Two new tokens for
		displaying GSSAPI buffers, either has hex or as a
		printable string.

	* gss-client.c (call_server): Add option to support reading in the
		message to be signed from a file.

Wed Feb 28 11:42:26 1996  Theodore Y. Ts'o  <tytso@dcl>

	* gss-client.c (call_server): Get the nametype OID from
		gss_display_name, print it, and then release the nametype
		OID.  This tests gss_display_name()'s ability to return a
		valid nametype, which can then be freed successfully.

Tue Feb 27 17:26:15 1996  Ezra Peisach  (epeisach@kangaroo.mit.edu)

	* configure.in: Add USE_ANAME.

Wed Jan  3 21:55:30 1996  Theodore Y. Ts'o  <tytso@dcl>

	* gss-client.c (main, client_establish_context): If the -d flag is
		given to the client, then try to delegate credentials when
		establishing the context.

Thu Oct 12 11:15:28 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* gss-misc.c (recv_token): When continuing partial read, decrease
		number of bytes to read.
